# Coursera-Langchain-Chat-with-Data

./: L1-Document_loading.ipynb  L2-Document_splitting.ipynb  L3-Vectorstores_embeddings.ipynb  L4-Retrieval.ipynb  L5-Question_answering.ipynb  pyproject.toml
.ipynb_checkpoints/: L3-Vectorstores_embeddings-checkpoint.ipynb  L4-Retrieval-checkpoint.ipynb
docs/chroma/: chroma.sqlite3
